--- a/app/views/web/admin/users/index.html.haml
+++ b/app/views/web/admin/users/index.html.haml
@@ -8,7 +8,7 @@
 %table.table.table-striped
   %thead
     %tr
-      %th= sort_link @q, :first_name
+      %th= sort_link @q, :name
       %th= sort_link @q, :email
       %th= sort_link @q, :company
       %th
