--- a/app/views/layouts/web/admin/application.html.haml
+++ b/app/views/layouts/web/admin/application.html.haml
@@ -8,6 +8,7 @@
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
+    = javascript_include_tag "admin/application"
     = stylesheet_link_tag "application", :media => "all"
     -#%link(href="images/favicon.ico" rel="shortcut icon")
     -#%link(href="images/apple-touch-icon.png" rel="apple-touch-icon")
@@ -39,4 +40,3 @@
       %footer
         %p &nbsp;
         %p &copy; Company 2012
-    = javascript_include_tag "application"
