--- a/app/views/layouts/web/application.html.haml
+++ b/app/views/layouts/web/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta(charset="utf-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= content_for?(:title) ? yield(:title) : "MoviesDb"
+    %title= content_for?(:title) ? yield(:title) : "Programmers Day"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -38,5 +38,5 @@
           = yield
       %footer
         %p &nbsp;
-        %p &copy; Company 2012
+        %p &copy; 2012
     = javascript_include_tag "application"
