--- a/app/views/web/members/_form.html.haml
+++ b/app/views/web/members/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @user, url: url do |f|
+= simple_form_for @member, url: url do |f|
   .row
     .span6
       = f.input :first_name
