--- a/app/views/layouts/web/admin/application.html.haml
+++ b/app/views/layouts/web/admin/application.html.haml
@@ -9,7 +9,7 @@
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     = javascript_include_tag "admin/application"
-    = stylesheet_link_tag "application", :media => "all"
+    = stylesheet_link_tag "admin/application", :media => "all"
     -#%link(href="images/favicon.ico" rel="shortcut icon")
     -#%link(href="images/apple-touch-icon.png" rel="apple-touch-icon")
     -#%link(href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72")
