--- a/app/views/layouts/web/application.html.haml
+++ b/app/views/layouts/web/application.html.haml
@@ -1,5 +1,5 @@
 !!! 5
-%html(lang="en")
+%html{:"xmlns:fb" => "http://ogp.me/ns/fb#"}
   %head
     %meta(charset="utf-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
@@ -37,6 +37,8 @@
         - else
           = yield
       %footer
+        %p &nbsp;
+        = render 'layouts/web/shared/socials'
         %p &nbsp;
         %p &copy; 2012
     = javascript_include_tag "application"
