--- a/app/views/layouts/web/application.html.haml
+++ b/app/views/layouts/web/application.html.haml
@@ -3,7 +3,11 @@
   %head
     %meta(charset="utf-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= content_for?(:title) ? yield(:title) : "Programmers Day"
+    %meta{property: "og:image", content: "http://ls.rt.ru/assets/img/partner_sochi.png"}
+    %meta{property: "og:title", content: "#{title}"}
+    %meta{property: "og:site_name", content: "#{title}"}
+
+    %title= title
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
