--- a/app/views/web/members/_form.html.haml
+++ b/app/views/web/members/_form.html.haml
@@ -10,4 +10,4 @@
       = f.input :university
       = f.input :course
   .form-actions
-    = f.button :submit, t('.register'), class: 'btn btn-primary btn-large'
+    = f.button :submit, t('.register'), class: 'btn btn-primary btn-large span2'
