add age to reg form

--- a/app/views/web/members/_form.html.haml
+++ b/app/views/web/members/_form.html.haml
@@ -6,6 +6,7 @@
       = f.input :email
       = f.input :phone
     .span6
+      = f.input :age
       = f.input :company
       = f.input :university
       = f.input :course
