--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,20 @@
  *= require_tree .
  */
 
+table.partners {
+    margin-top: 30px;
+    width: 100%;
+}
+
+table.partners td {
+    vertical-align: middle;
+    text-align: center;
+}
+
+table.social td.fb_like {
+  padding-right: 8px;
+}
+
 table.social td.fb_like {
   padding-right: 33px;
 }
