--- a/app/views/web/admin/users/index.html.haml
+++ b/app/views/web/admin/users/index.html.haml
@@ -11,6 +11,7 @@
       %th= sort_link @q, :name
       %th= sort_link @q, :email
       %th= sort_link @q, :phone
+      %th= sort_link @q, :age
       %th= sort_link @q, :company
       %th= sort_link @q, :university
       %th= sort_link @q, :course
@@ -22,6 +23,7 @@
       -#  = link_to user, edit_admin_user_path(user)
       %td= user.email
       %td= user.phone
+      %td= user.age
       %td= user.company
       %td= user.university
       %td= user.course
