add reg email notification

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,8 +22,8 @@ table.partners td {
     text-align: center;
 }
 
-table.social td.fb_like {
-  padding-right: 8px;
+table.social td.vk_like {
+  padding-right: 7px;
 }
 
 table.social td.fb_like {
