--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,8 +8,9 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require bootstrap_and_overrides
+ *= require jcarousel-skin
  *= require_self
- *= require_tree .
  */
 
 table.partners {
@@ -28,4 +29,7 @@ table.social td.vk_like {
 
 table.social td.fb_like {
   padding-right: 33px;
+}
+
+div.news {
 }
