--- a/app/views/layouts/web/admin/shared/_nav.html.haml
+++ b/app/views/layouts/web/admin/shared/_nav.html.haml
@@ -3,5 +3,5 @@
   %ul.nav
     %li= link_to t('.pages'), admin_root_path
     %li= link_to t('.users'), admin_users_path
-    %li= link_to t('.news'), '#'
+    %li= link_to t('.news'), admin_news_index_path
 
