--- a/app/views/web/admin/pages/_form.html.haml
+++ b/app/views/web/admin/pages/_form.html.haml
@@ -2,7 +2,7 @@
   - if @page.new_record?
     = f.input :uri
   = f.input :name, input_html: { class: 'span5' }
-  = f.input :body, as: :ckeditor, input_html: { width: "800", height: "500", toolbar: 'Easy' }
+  = f.input :body, as: :ckeditor, input_html: { toolbar: 'Easy' }
   .form-actions
     = f.button :submit, class: 'btn btn-primary'
     = link_to t('.cancel'), admin_pages_path, class: 'btn'
