--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,10 @@
  *= require_self
  */
 
+html {
+  background: #292727;
+}
+
 table.partners {
     margin-top: 30px;
     width: 100%;
@@ -32,4 +36,9 @@ table.social td.fb_like {
 }
 
 div.news {
+}
+
+footer {
+  background: #292727;
+  color: #fff;
 }
