add courses dict

--- a/app/views/web/members/_form.html.haml
+++ b/app/views/web/members/_form.html.haml
@@ -9,7 +9,7 @@
       = f.input :age
       = f.input :company
       = f.input :university
-      = f.input :course
+      = f.association :course
   .row
     .span12
       = f.input :excursio, label: false, inline_label: t('.excursio')
