fix admin views

--- a/app/views/web/admin/users/index.html.haml
+++ b/app/views/web/admin/users/index.html.haml
@@ -14,7 +14,10 @@
       %th= sort_link @q, :age
       %th= sort_link @q, :company
       %th= sort_link @q, :university
-      %th= sort_link @q, :course
+      %th= sort_link @q, :course_name
+      %th= sort_link @q, :excursio
+      %th= sort_link @q, :subscribe
+      %th= sort_link @q, :process_personal_data
 
   %tbody
   - @users.each do |user|
@@ -27,6 +30,9 @@
       %td= user.company
       %td= user.university
       %td= user.course
+      %td= user.excursio
+      %td= user.subscribe
+      %td= user.process_personal_data
       -#%td
         .pull-right
           = link_to edit_admin_user_path(user), class: 'btn btn-mini btn-primary' do
