--- a/app/views/layouts/web/application.html.haml
+++ b/app/views/layouts/web/application.html.haml
@@ -11,6 +11,11 @@
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
+      = stylesheet_link_tag "ie"
+    /[if IE 6]
+      :javascript
+          location = '/ie6'
+
     = stylesheet_link_tag "application", :media => "all"
     -#%link(href="images/favicon.ico" rel="shortcut icon")
     -#%link(href="images/apple-touch-icon.png" rel="apple-touch-icon")
@@ -18,42 +23,10 @@
     -#%link(href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114")
 
   %body
-    .navbar.navbar-fixed-top
-      .navbar-inner
-        .container
-          %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-          = render 'layouts/web/shared/nav'
-    .container
+    .main
+      = yield :header
+      = yield
+      = render 'layouts/web/shared/social'
+      = render 'layouts/web/shared/footer'
 
-      .content
-        = flash_block
-        = render_breadcrumbs
-        - if content_for?(:sidebar)
-          .row
-            .span9
-              = yield
-            .span3
-              = yield :sidebar
-        - else
-          = yield
-      - if current_page?(root_url)
-        .page-header
-          %h2= t('.partners')
-      - else
-        %p
-          %br
-      = render 'layouts/web/shared/partners'
-      %p
-        %br
-    %footer
-      .container
-        %p &nbsp;
-        = render 'layouts/web/shared/social'
-        %p &nbsp;
-        %p
-          &copy; 2012
-          = t('.copyright')
     = javascript_include_tag "application"
