--- a/app/views/layouts/web/shared/_nav.html.haml
+++ b/app/views/layouts/web/shared/_nav.html.haml
@@ -1,7 +1,17 @@
-.container.nav-collapse
-  %ul.nav
-    %li= link_to t('.news'), news_index_path
-    %li= link_to t('.info'), root_path
-    %li= link_to t('.registration'), new_member_path
-    %li= link_to t('.questions'), page_path(:feedback)
-
+.menu
+  %ul
+    %li
+      = link_to '#page1' do
+        != t('.news')
+    %li
+      = link_to '#page2' do
+        != t('.info')
+    %li
+      = link_to '#page3' do
+        != t('.registration')
+    %li
+      = link_to '#page4' do
+        != t('.questions')
+    %li
+      = link_to '#page5' do
+        != t('.organizators')
