--- a/app/views/web/news/_twitter.html.haml
+++ b/app/views/web/news/_twitter.html.haml
@@ -4,12 +4,12 @@
 
     version: 2,
     type: 'search',
-    search: 'deadlinecamp',
+    search: 'programmersday',
     interval: 30000,
-    title: '#Deadlinecamp',
+    title: '#ProgrammersDay',
     subject: 'Новости из Twitter',
-    width: 270,
-    height: 500,
+    width: 220,
+    height: 300,
     theme: {
       shell: {
         background: '#ffffff',
