--- a/app/views/web/members/new.html.haml
+++ b/app/views/web/members/new.html.haml
@@ -4,7 +4,8 @@
     .bg_r
     .logo
       %p
-        = image_tag 'logo.png'
+        = link_to root_path do
+          = image_tag 'logo.png'
 
 #page3
   .cent
