--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -68,3 +68,13 @@ input:-ms-input-placeholder {
 .error .help-inline {
   color: red;
 }
+
+#page5 table {
+  margin: 20px auto;
+}
+
+#page5 table td {
+  padding: 10px;
+  text-align: center;
+  vertical-align: middle;
+}
