--- a/app/views/web/news/_twitter.html.haml
+++ b/app/views/web/news/_twitter.html.haml
@@ -4,9 +4,9 @@
 
     version: 2,
     type: 'search',
-    search: 'programmersday',
+    search: '#itday',
     interval: 30000,
-    title: '#ProgrammersDay',
+    title: '#itday',
     subject: 'Новости из Twitter',
     width: 220,
     height: 300,
