--- a/app/views/layouts/web/application.html.haml
+++ b/app/views/layouts/web/application.html.haml
@@ -4,6 +4,7 @@
     %meta(charset="utf-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
     %meta{property: "og:title", content: "#{title}"}
+    %meta{property: "og:image", content: "/assets/card.jpg"}
     %meta{property: "og:site_name", content: "#{title}"}
 
     %title= title
@@ -31,3 +32,4 @@
       = render 'layouts/web/shared/footer'
 
     = javascript_include_tag "application"
+    = javascript_include_tag 'http://widgets.twimg.com/j/2/widget.js'
