--- a/app/views/layouts/web/application.html.haml
+++ b/app/views/layouts/web/application.html.haml
@@ -31,5 +31,7 @@
       = render 'layouts/web/shared/social'
       = render 'layouts/web/shared/footer'
 
+    .up
+      %a= image_tag '/assets/up.png'
     = javascript_include_tag "application"
     = javascript_include_tag 'http://widgets.twimg.com/j/2/widget.js'
