--- a/app/views/layouts/web/shared/_nav.html.haml
+++ b/app/views/layouts/web/shared/_nav.html.haml
@@ -1,17 +1,17 @@
 .menu
   %ul
-    %li
+    %li.anchor-news
       = link_to '#page1' do
         != t('.news')
-    %li
+    %li.anchor-info
       = link_to '#page2' do
         != t('.info')
-    %li
+    %li.anchor-want
       = link_to '#page3' do
         != t('.registration')
-    %li
+    %li.anchor-quest
       = link_to '#page4' do
         != t('.questions')
-    %li
+    %li.anchor-orgs
       = link_to '#page5' do
         != t('.organizators')
