--- a/app/views/web/welcome/_counter.html.haml
+++ b/app/views/web/welcome/_counter.html.haml
@@ -20,4 +20,5 @@
           %span.lin= image_tag 'lin3.gif'
 
     %li.br
-      = image_tag 'time_r.png'
+      &nbsp;
+      -#= image_tag 'time_r.png'
