--- a/app/views/layouts/web/application.html.haml
+++ b/app/views/layouts/web/application.html.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
     %meta{property: "og:title", content: "#{title}"}
-    %meta{property: "og:image", content: "/assets/card.jpg"}
+    %meta{property: "og:image", content: "http://prog73.ru/assets/card.jpg"}
     %meta{property: "og:site_name", content: "#{title}"}
 
     %title= title
