--- a/app/views/web/admin/users/index.html.haml
+++ b/app/views/web/admin/users/index.html.haml
@@ -1,7 +1,7 @@
 .page-header
-  -#= link_to new_admin_user_path, class: 'btn btn-success pull-right' do
-    %i.icon-plus
-    = t('.new')
+  = link_to api_users_path(format: :xlsx), target: :_blank, class: 'btn btn-success pull-right' do
+    %i.icon-download-alt
+    = t('.xls')
   %h1
     = t('.users')
 
