--- a/app/views/web/admin/pages/index.html.haml
+++ b/app/views/web/admin/pages/index.html.haml
@@ -15,8 +15,7 @@
   %tbody
   - @pages.each do |page|
     %tr
-      %td
-        = link_to page, page_path(page), target: :_blank
+      %td= page
       %td= page.uri
       %td
         .pull-right
