fix admin users index

--- a/app/views/web/admin/users/index.html.haml
+++ b/app/views/web/admin/users/index.html.haml
@@ -13,6 +13,7 @@
       = link_to import_api_timepad_maillists_path, class: 'btn refresh-timepad-maillists',
         title: t('.refresh_list') do
         %i.icon-refresh
+      &nbsp;
       = f.button :submit, class: 'btn-primary'
 
 .pagination
