--- a/app/views/layouts/web/application.html.haml
+++ b/app/views/layouts/web/application.html.haml
@@ -24,7 +24,7 @@
     -#%link(href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114")
 
   %body
-    = flash_block
+    = bootstrap_flash
     .main
       = yield :header
       = yield
