Bootstrap flash helper renamed in admin layout

--- a/app/views/layouts/web/admin/application.html.haml
+++ b/app/views/layouts/web/admin/application.html.haml
@@ -27,7 +27,7 @@
     .container
 
       .content
-        = flash_block
+        = bootstrap_flash
         = render_breadcrumbs
         - if content_for?(:sidebar)
           .row
