--- a/app/views/layouts/web/application.html.haml
+++ b/app/views/layouts/web/application.html.haml
@@ -18,13 +18,9 @@
           location = '/ie6/index.html'
 
     = stylesheet_link_tag "application", :media => "all"
-    -#%link(href="images/favicon.ico" rel="shortcut icon")
-    -#%link(href="images/apple-touch-icon.png" rel="apple-touch-icon")
-    -#%link(href="images/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72")
-    -#%link(href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114")
 
   %body
-    = bootstrap_flash
+    = flash_block
     .main
       = yield :header
       = yield
